Fixing a clipping text issue

--- a/client/layout/sidebar/style.scss
+++ b/client/layout/sidebar/style.scss
@@ -130,7 +130,7 @@
 
 	a {
 		font-size: 14px;
-		line-height: 0;
+		line-height: 1;
 		position: relative;
 		padding: 11px 16px 11px 18px;
 		color: $sidebar-text-color;
